# posto

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .oxlintrc.json  PLAN-project-adapters.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/workflows/: check.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.css  App.tsx  index.tsx  routing.ts  updater.ts
apps/desktop/src/components/: AppHeader.tsx  DeploymentControl.tsx  DeploymentDrawer.tsx  MediaDrawer.tsx  MediaSidebar.tsx  PreviewPane.tsx  RecentProjectsSpotlight.tsx  SeoPreview.tsx  SetupFlow.tsx
apps/desktop/src/hooks/: useDeployment.ts  useDevServer.ts  usePreview.ts
apps/docs/: .gitignore  astro.config.mjs  pnpm-lock.yaml
apps/docs/.astro/collections/: docs.schema.json
apps/docs/src/components/: Sidebar.astro
apps/docs/src/content/docs/: getting-started.mdx  index.mdx  install.mdx  what-is-posto.mdx
apps/mobile/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/src/: App.css  App.tsx  DeploymentStatus.tsx  MediaLibraryPane.tsx  Onboarding.tsx  RepoHome.tsx  index.tsx
apps/mobile/src/components/: AppSettings.tsx  RepoHeader.tsx  RepoSettings.tsx
apps/mobile/src/hooks/: usePullRefresh.ts
docs/: mobile-plan.md
scripts/: build-ios.sh  install-ios-device.mjs  release.sh
src/: App.css  App.tsx  ipc.ts  updater.ts  webawesome.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  browser.rs  devserver.rs  env.rs  fs.rs  lib.rs  main.rs  proxy.rs  repos.rs  settings.rs  watch.rs  workspace.rs
src-tauri/src/auth/: storage.rs
src-tauri/src/git/: creds.rs  mod.rs
src-tauri/tests/: git_parity.rs
src/components/: AppHeader.tsx  BodyEditor.tsx  ComponentPicker.tsx  EditorPane.tsx  FieldEditor.tsx  FileList.tsx  FormEditor.tsx  HtmlNodes.tsx  ImagePicker.tsx  MdxNodes.tsx  NewFileModal.tsx  PreviewPane.tsx  PublishModal.tsx  SeoPreview.tsx  SetupFlow.tsx  Sidebar.tsx  TemplateGallery.tsx
src/hooks/: useCurrentFile.ts  useDevServer.ts  useFileGroups.ts  useGitSync.ts  usePreview.ts  useSchemas.ts
src/mdx/: mdx.ts  propFields.ts
src/pagescms/: config.ts  frontmatter.ts  validate.ts
(+14 files in other folders)
