[package]
name = "posto"
version = "0.8.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "posto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.21.0", features = ["ssh", "https", "vendored-libgit2", "vendored-openssl"] }
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "rustls"] }
tokio = { version = "1", features = ["time"] }
image = { version = "0.25", default-features = false, features = ["gif", "ico", "jpeg", "png", "tiff", "webp"] }

# Desktop-only: file watching, PATH fixup, updater, process restart, and the
# OS keychain for the stored GitHub session. Mobile builds (iOS/Android)
# exclude them along with the modules that use them.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify = "8"
notify-debouncer-mini = "0.6"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", version = "0.0.0" }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Default features cover Windows and Linux (Secret Service); apple-native adds
# the macOS/Keychain backend.
keyring = { version = "4", features = ["apple-native-keyring-store"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
keyring-core = "1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1.0.1", features = ["protected"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString"] }

[dev-dependencies]
tempfile = "3.27.0"
